corrected pages to align with 2016 guidelines

--- a/dedications.tex
+++ b/dedications.tex
@@ -4,6 +4,6 @@
   {\end{center} \vspace*{\stretch{3}} \clearpage}
 \begin{dedication}
 
-\Large To Mom and Dad, who stood by and did nothing while I suffered through graduate school. Thanks, guys. 
+\Large To my cats, who napped while I suffered through graduate school. Thanks, furballs. 
 
 \end{dedication}
