removed global introduction page

--- a/vita.tex
+++ b/vita.tex
@@ -42,6 +42,7 @@ Place of Birth: City, State, Country
 
 \begin{multicols}{2}
 \flushleft{
+\addcontentsline{toc}{chapter}{Vita}
 \small{Supporting Institution} \\[-0.25cm]
 \textit{Support Designation} 
 \vspace{1pt}}
