table of contents revision

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -173,6 +173,9 @@
 
 \doublespacing
 
+%   Introduction
+\include{Introduction/introduction}
+
 % ------Chapter One----------
 \chapter{Chapter One}
 \label{ch-1}
@@ -230,7 +233,7 @@
 \section{Introduction}\label{sec:ChapThreeIntroduction}
 \input{ChapThree/Section-Introduction}
 
-\section{RelatedWord}\label{sec:ChapThreeMotivation}
+\section{Related Work}\label{sec:ChapThreeMotivation}
 \input{ChapThree/Section-Related-Work}
 
 \section{Method}\label{sec:ChapThreeMethod}
@@ -242,13 +245,14 @@
 \section{Results}\label{sec:ChapThreeResults}
 \input{ChapThree/Section-Results}
 
-\section{Related Work}\label{sec:ChapThreeDiscussion} 
+\section{Discussion}\label{sec:ChapThreeDiscussion} 
 \input{ChapThree/Section-Discussion}
 
 \section{Conclusion}\label{sec:ChapThreeConclusion}
 \input{ChapThree/Section-Conclusion}
 
-\include{Conclusion/Conclusion}
+%   Conclusion
+\include{Conclusion/conclusion}
 
 {\singlespace
 \printbibliography}
