removed redundant chapter numbering

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -3,7 +3,7 @@
 \large
 
 
-To all people I wish to acknowledge: why did you let me do this?
+To all the people I wish to acknowledge: why did you let me do this?
 
 
 \bigskip\medskip
