--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,5 +1,5 @@
 \documentclass[letterpaper]{tandon_thesis}
-\usepackage[medium]{titlesec}
+\usepackage{titlesec}
 \usepackage{calc}
 \usepackage[subfigure]{ccaption}
 \usepackage{subfigure}
@@ -27,6 +27,9 @@
          \setlength{\parsep}{\bibparsep}}}
     {\endlist}
     {\item}
+
+\titleformat{\chapter}[display]
+{\bfseries\Huge}{}{0pt}{\LARGE}
 
 \newtheorem{condition}{Condition}[section]
 \newtheorem{definition}{Definition}[section]
